frontend/src/components/SearchResultsItem.module.css
.search_result_item {
  background-color: white !important;
  transition: 0.3s;
  user-select: none;
  overflow: hidden;
  position: relative;
  font-size: 13px;
  line-height: 32px;
  height: 32px;
  border-bottom: solid 1px #f6f6f6;
  border-top: solid 1px #f6f6f6;
}

.last_search_result_item {
  border-bottom-left-radius: 8px;
  border-bottom-right-radius: 8px;
}

.search_result_item:hover {
  cursor: pointer;
  background-color: #e1edff !important;
  border-color: #e1edff !important;
}

.search_result_item:focus,
.search_result_item:active {
  outline: none;
}

.ellipsis_text {
  display: block;
  width: 100%;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
}

:global(#title_popover) {
  box-shadow: 0 25px 50px -12px rgba(0, 0, 0, 0.25);
}

.spring {
  color: rgb(15, 100, 22) !important;
  background-color: rgb(184, 223, 187) !important;
}

.summer {
  color: rgb(230, 130, 0) !important;
  background-color: rgb(243, 233, 200) !important;
}

.fall {
  color: rgb(126, 52, 29) !important;
  background-color: rgba(141, 64, 33, 0.404) !important;
}

.dot {
  display: inline;
}

.skills_areas {
  display: inline-flex;
}

.course_section {
  display: inline;
  color: rgba(1, 1, 1, 0.4);
}

.extra_info {
  background-color: #e23e57;
  color: white;
  border-radius: 4px;
  width: max-content;
  padding: 0.2rem 0.4rem;
  font-weight: 600;
  font-size: 0.75rem;
}

.icon_ratings {
  font-size: 0.75rem;
}

.workload_icon_empty,
.workload_icon_full {
  padding: 1px;
}

.workload_icon_empty {
  color: #e8e8e8;
}

.rating_icon_empty,
.rating_icon_full {
  padding: 1px;
}

.rating_icon_empty {
  color: #e8e8e8;
}

.rating_cell {
  width: max-content;
  text-align: center;
  font-weight: 600;
  border-radius: 6px;
  display: flex;
  align-items: center;
  justify-content: center;
  padding: 3px 4px;
  line-height: 1.5;
}

.online_tag {
  font-weight: 600 !important;
  padding: 3px 4px !important;
  border-radius: 6px !important;
  width: max-content;
  background: rgba(0, 0, 0, 0.1);
}

.tag {
  margin: 1px;
  font-size: 0.8rem !important;
  font-weight: 600 !important;
  padding: 4px 6px !important;
  border-radius: 6px !important;
}

.none {
  background-color: rgb(102, 102, 102) !important;
}

.friends_count {
  display: flex;
  align-items: center;
}

.expanded_card {
  background-color: white;
}

.worksheet_btn {
  position: absolute;
  top: -20px;
  left: -4px;
  transition: 0.3s;
  transform: scaleY(1.3);
}

.worksheet_btn:hover {
  transform: scaleY(1.3) translateY(6px);
}

.conflict_error {
  position: absolute;
  top: 0px;
  left: 6px;
  transform: translate(100%, -35%);
}

.fb_friends {
  font-weight: 500;
  padding-left: 2px;
}

